--- a/index.html
+++ b/index.html
@@ -385,27 +385,7 @@
             </div>
 
             <div class="relative border-l border-gray-700 ml-4 md:ml-0 space-y-12">
-                <!-- Timeline Item 1 -->
-                <div class="relative pl-8 md:pl-0 reveal">
-                    <div class="md:flex items-center justify-between">
-                        <div class="hidden md:block w-1/2 pr-8 text-right">
-                            <h3 class="text-xl font-bold text-white">Senior Consultant</h3>
-                            <p class="text-data-accent">Deloitte</p>
-                        </div>
-                        <div class="absolute left-[-5px] md:left-1/2 md:ml-[-5px] w-3 h-3 bg-data-accent rounded-full border-2 border-black ring-4 ring-data-accent/20"></div>
-                        <div class="md:w-1/2 md:pl-8">
-                            <div class="md:hidden mb-2">
-                                <h3 class="text-xl font-bold text-white">Senior Consultant</h3>
-                                <p class="text-data-accent">Deloitte</p>
-                            </div>
-                            <span class="text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">2021 - Present</span>
-                            <p class="mt-2 text-gray-300 text-sm">
-                                Leading data migration projects for Fortune 500 clients. Architecting ETL pipelines using Azure Data Factory and Databricks. Delivering high-impact PowerBI dashboards for C-level executives.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
+                
                 <!-- Timeline Item 2 -->
                 <div class="relative pl-8 md:pl-0 reveal">
                     <div class="md:flex items-center justify-between flex-row-reverse">
@@ -419,7 +399,7 @@
                                 <h3 class="text-xl font-bold text-white">Consultant</h3>
                                 <p class="text-data-accent">Deloitte</p>
                             </div>
-                            <span class="text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">2019 - 2021</span>
+                            <span class="text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">2022 - Present</span>
                             <p class="mt-2 text-gray-300 text-sm">
                                 Developed complex financial models in Excel and VBA. Automated reporting processes using SQL and Python. Assisted in cloud infrastructure setup on Azure.
                             </p>
@@ -474,7 +454,7 @@
                     <div class="md:flex items-center justify-between">
                         <div class="hidden md:block w-1/2 pr-8 text-right">
                             <h3 class="text-xl font-bold text-white">Engineering Trainee</h3>
-                            <p class="text-data-accent">Tata Steel</p>
+                            <p class="text-data-accent">Tata Steel, Jamshedpur</p>
                         </div>
                         <div class="absolute left-[-5px] md:left-1/2 md:ml-[-5px] w-3 h-3 bg-green-400 rounded-full border-2 border-black ring-4 ring-green-400/20"></div>
                         <div class="md:w-1/2 md:pl-8">
@@ -495,7 +475,7 @@
                     <div class="md:flex items-center justify-between flex-row-reverse">
                         <div class="hidden md:block w-1/2 pl-8 text-left">
                             <h3 class="text-xl font-bold text-white">Electrical & Electronics Engineer</h3>
-                            <p class="text-data-accent">RUGVED Systems</p>
+                            <p class="text-data-accent">RUGVED Systems, Manipal</p>
                         </div>
                         <div class="absolute left-[-5px] md:left-1/2 md:ml-[-5px] w-3 h-3 bg-pink-400 rounded-full border-2 border-black ring-4 ring-pink-400/20"></div>
                         <div class="md:w-1/2 md:pr-8 md:text-right">
