--- a/index.html
+++ b/index.html
@@ -377,19 +377,29 @@
         </div>
     </section>
 
-    <!-- Experience Section -->
+   <!-- Experience Section -->
 <section id="experience" class="py-20 relative">
     <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="text-center mb-16 reveal">
             <h2 class="text-3xl md:text-4xl font-bold">Professional Journey</h2>
         </div>
 
-        <!-- Timeline -->
-        <div class="relative border-l border-gray-700 ml-4 space-y-12">
+        <!-- Ladder Timeline -->
+        <div class="relative ml-6 space-y-14">
 
-            <!-- Item 1 -->
-            <div class="relative pl-8 reveal">
-                <div class="absolute left-[-5px] w-3 h-3 bg-data-purple rounded-full border-2 border-black ring-4 ring-data-purple/20"></div>
+            <!-- Vertical Ladder Rail -->
+            <div class="absolute left-0 top-0 bottom-0 w-[3px] bg-gradient-to-b from-data-accent via-gray-600 to-gray-700 rounded-full"></div>
+
+            <!-- PRESENT ROLE -->
+            <div class="relative pl-12 reveal">
+                <!-- Ladder rung -->
+                <div class="absolute left-[-6px] top-3 w-6 h-[3px] bg-data-accent rounded"></div>
+
+                <!-- Sitting person -->
+                <div class="absolute left-[-22px] top-[-6px] text-data-accent text-2xl animate-pulse">
+                    <i class="fas fa-person"></i>
+                </div>
+
                 <h3 class="text-xl font-bold text-white">Consultant</h3>
                 <p class="text-data-accent">Deloitte</p>
                 <span class="inline-block mt-2 text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">
@@ -401,62 +411,61 @@
                 </p>
             </div>
 
-            <!-- Item 2 -->
-            <div class="relative pl-8 reveal">
-                <div class="absolute left-[-5px] w-3 h-3 bg-white rounded-full border-2 border-black ring-4 ring-white/20"></div>
+            <!-- Analyst -->
+            <div class="relative pl-12 reveal">
+                <div class="absolute left-[-6px] top-3 w-6 h-[3px] bg-gray-400 rounded"></div>
+
                 <h3 class="text-xl font-bold text-white">Analyst</h3>
                 <p class="text-data-accent">Deloitte</p>
                 <span class="inline-block mt-2 text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">
                     2020 – 2022
                 </span>
                 <p class="mt-2 text-gray-300 text-sm">
-                    Started professional journey focusing on data cleaning, validation, and building foundational
-                    PowerBI reports for client audits.
+                    Focused on data cleaning, validation, and building foundational PowerBI dashboards for client audits.
                 </p>
             </div>
 
-            <!-- Item 3 -->
-            <div class="relative pl-8 reveal">
-                <div class="absolute left-[-5px] w-3 h-3 bg-blue-400 rounded-full border-2 border-black ring-4 ring-blue-400/20"></div>
+            <!-- BTech -->
+            <div class="relative pl-12 reveal">
+                <div class="absolute left-[-6px] top-3 w-6 h-[3px] bg-gray-500 rounded"></div>
+
                 <h3 class="text-xl font-bold text-white">B.Tech – Mechanical Engineering</h3>
                 <p class="text-data-accent">Manipal Institute of Technology, Manipal</p>
                 <span class="inline-block mt-2 text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">
                     2016 – 2020
                 </span>
                 <p class="mt-2 text-gray-300 text-sm">
-                    Completed undergraduate studies with strong fundamentals in engineering, analytics, and
-                    problem-solving. <br>
+                    Strong foundation in engineering, analytics, and problem-solving.  
                     <span class="text-gray-400">CGPA: 8.32</span>
                 </p>
             </div>
 
-            <!-- Item 4 -->
-            <div class="relative pl-8 reveal">
-                <div class="absolute left-[-5px] w-3 h-3 bg-green-400 rounded-full border-2 border-black ring-4 ring-green-400/20"></div>
+            <!-- Tata Steel -->
+            <div class="relative pl-12 reveal">
+                <div class="absolute left-[-6px] top-3 w-6 h-[3px] bg-gray-600 rounded"></div>
+
                 <h3 class="text-xl font-bold text-white">Engineering Trainee</h3>
                 <p class="text-data-accent">Tata Steel, Jamshedpur</p>
                 <span class="inline-block mt-2 text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">
                     Jun 2019 – Jul 2019
                 </span>
                 <p class="mt-2 text-gray-300 text-sm">
-                    Worked primarily in the mills maintenance department, improving reliability of pneumatic
-                    systems in the CRM area.
+                    Worked in mills maintenance, improving reliability of pneumatic systems in the CRM area.
                 </p>
             </div>
 
-            <!-- Item 5 -->
-            <div class="relative pl-8 reveal">
-                <div class="absolute left-[-5px] w-3 h-3 bg-pink-400 rounded-full border-2 border-black ring-4 ring-pink-400/20"></div>
+            <!-- RUGVED -->
+            <div class="relative pl-12 reveal">
+                <div class="absolute left-[-6px] top-3 w-6 h-[3px] bg-gray-700 rounded"></div>
+
                 <h3 class="text-xl font-bold text-white">Electrical & Electronics Engineer</h3>
                 <p class="text-data-accent">RUGVED Systems, Manipal</p>
                 <span class="inline-block mt-2 text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">
                     2017 – 2019
                 </span>
                 <p class="mt-2 text-gray-300 text-sm">
-                    Led design, integration, and testing of vehicle electronic systems including power distribution,
-                    sensor interfacing (LiDAR, GPS, IMU), motor controllers, and embedded computing (NVIDIA Jetson TX2).
-                    Developed PCBs, ensured EMI-safe wiring, implemented diagnostics, fail-safes, and real-time telemetry,
-                    and collaborated across mechanical and software teams for competition-ready deployment.
+                    Led vehicle electronics architecture including sensors (LiDAR, GPS, IMU), motor controllers,
+                    embedded computing (NVIDIA Jetson TX2), EMI-safe PCB design, diagnostics, fail-safes, and telemetry.
                 </p>
             </div>
 
