--- a/index.html
+++ b/index.html
@@ -384,94 +384,104 @@
             <h2 class="text-3xl md:text-4xl font-bold">Professional Journey</h2>
         </div>
 
-        <!-- Ladder Timeline -->
-        <div class="relative ml-6 space-y-14">
+        <!-- Ladder Container -->
+        <div class="relative flex gap-10">
 
-            <!-- Vertical Ladder Rail -->
-            <div class="absolute left-0 top-0 bottom-0 w-[3px] bg-gradient-to-b from-data-accent via-gray-600 to-gray-700 rounded-full"></div>
+            <!-- LADDER -->
+            <div class="relative w-16 flex flex-col items-center">
 
-            <!-- PRESENT ROLE -->
-            <div class="relative pl-12 reveal">
-                <!-- Ladder rung -->
-                <div class="absolute left-[-6px] top-3 w-6 h-[3px] bg-data-accent rounded"></div>
+                <!-- Left Rail -->
+                <div class="absolute left-3 top-0 bottom-0 w-[4px] bg-gradient-to-b from-data-accent via-gray-600 to-gray-700 rounded-full"></div>
 
-                <!-- Sitting person -->
-                <div class="absolute left-[-22px] top-[-6px] text-data-accent text-2xl animate-pulse">
-                    <i class="fas fa-person"></i>
+                <!-- Right Rail -->
+                <div class="absolute right-3 top-0 bottom-0 w-[4px] bg-gradient-to-b from-data-accent via-gray-600 to-gray-700 rounded-full"></div>
+
+                <!-- Rungs -->
+                <div class="flex flex-col justify-between h-full py-4">
+                    <div class="w-10 h-[4px] bg-data-accent rounded animate-pulse"></div>
+                    <div class="w-10 h-[4px] bg-gray-400 rounded"></div>
+                    <div class="w-10 h-[4px] bg-gray-500 rounded"></div>
+                    <div class="w-10 h-[4px] bg-gray-600 rounded"></div>
+                    <div class="w-10 h-[4px] bg-gray-700 rounded"></div>
                 </div>
 
-                <h3 class="text-xl font-bold text-white">Consultant</h3>
-                <p class="text-data-accent">Deloitte</p>
-                <span class="inline-block mt-2 text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">
-                    2022 – Present
-                </span>
-                <p class="mt-2 text-gray-300 text-sm">
-                    Developed complex financial models in Excel and VBA. Automated reporting processes using SQL and Python.
-                    Assisted in cloud infrastructure setup on Azure.
-                </p>
+                <!-- PERSON AT PRESENT -->
+                <div class="absolute top-2 left-1/2 -translate-x-1/2 text-data-accent text-3xl animate-bounce">
+                    <i class="fas fa-person-sitting"></i>
+                </div>
             </div>
 
-            <!-- Analyst -->
-            <div class="relative pl-12 reveal">
-                <div class="absolute left-[-6px] top-3 w-6 h-[3px] bg-gray-400 rounded"></div>
+            <!-- CONTENT -->
+            <div class="flex-1 space-y-14">
 
-                <h3 class="text-xl font-bold text-white">Analyst</h3>
-                <p class="text-data-accent">Deloitte</p>
-                <span class="inline-block mt-2 text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">
-                    2020 – 2022
-                </span>
-                <p class="mt-2 text-gray-300 text-sm">
-                    Focused on data cleaning, validation, and building foundational PowerBI dashboards for client audits.
-                </p>
+                <!-- Consultant -->
+                <div class="reveal">
+                    <h3 class="text-xl font-bold text-white">Consultant</h3>
+                    <p class="text-data-accent">Deloitte</p>
+                    <span class="inline-block mt-2 text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">
+                        2022 – Present
+                    </span>
+                    <p class="mt-2 text-gray-300 text-sm">
+                        Developed complex financial models in Excel and VBA. Automated reporting processes using SQL and Python.
+                        Assisted in cloud infrastructure setup on Azure.
+                    </p>
+                </div>
+
+                <!-- Analyst -->
+                <div class="reveal">
+                    <h3 class="text-xl font-bold text-white">Analyst</h3>
+                    <p class="text-data-accent">Deloitte</p>
+                    <span class="inline-block mt-2 text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">
+                        2020 – 2022
+                    </span>
+                    <p class="mt-2 text-gray-300 text-sm">
+                        Focused on data cleaning, validation, and building foundational PowerBI dashboards.
+                    </p>
+                </div>
+
+                <!-- BTech -->
+                <div class="reveal">
+                    <h3 class="text-xl font-bold text-white">B.Tech – Mechanical Engineering</h3>
+                    <p class="text-data-accent">Manipal Institute of Technology, Manipal</p>
+                    <span class="inline-block mt-2 text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">
+                        2016 – 2020
+                    </span>
+                    <p class="mt-2 text-gray-300 text-sm">
+                        Strong foundation in engineering and problem-solving.
+                        <span class="text-gray-400">CGPA: 8.32</span>
+                    </p>
+                </div>
+
+                <!-- Tata Steel -->
+                <div class="reveal">
+                    <h3 class="text-xl font-bold text-white">Engineering Trainee</h3>
+                    <p class="text-data-accent">Tata Steel, Jamshedpur</p>
+                    <span class="inline-block mt-2 text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">
+                        Jun 2019 – Jul 2019
+                    </span>
+                    <p class="mt-2 text-gray-300 text-sm">
+                        Improved reliability of pneumatic systems in the CRM area.
+                    </p>
+                </div>
+
+                <!-- RUGVED -->
+                <div class="reveal">
+                    <h3 class="text-xl font-bold text-white">Electrical & Electronics Engineer</h3>
+                    <p class="text-data-accent">RUGVED Systems, Manipal</p>
+                    <span class="inline-block mt-2 text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">
+                        2017 – 2019
+                    </span>
+                    <p class="mt-2 text-gray-300 text-sm">
+                        Led vehicle electronics architecture including sensors, motor controllers, embedded systems,
+                        EMI-safe PCB design, telemetry, and system diagnostics.
+                    </p>
+                </div>
+
             </div>
-
-            <!-- BTech -->
-            <div class="relative pl-12 reveal">
-                <div class="absolute left-[-6px] top-3 w-6 h-[3px] bg-gray-500 rounded"></div>
-
-                <h3 class="text-xl font-bold text-white">B.Tech – Mechanical Engineering</h3>
-                <p class="text-data-accent">Manipal Institute of Technology, Manipal</p>
-                <span class="inline-block mt-2 text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">
-                    2016 – 2020
-                </span>
-                <p class="mt-2 text-gray-300 text-sm">
-                    Strong foundation in engineering, analytics, and problem-solving.  
-                    <span class="text-gray-400">CGPA: 8.32</span>
-                </p>
-            </div>
-
-            <!-- Tata Steel -->
-            <div class="relative pl-12 reveal">
-                <div class="absolute left-[-6px] top-3 w-6 h-[3px] bg-gray-600 rounded"></div>
-
-                <h3 class="text-xl font-bold text-white">Engineering Trainee</h3>
-                <p class="text-data-accent">Tata Steel, Jamshedpur</p>
-                <span class="inline-block mt-2 text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">
-                    Jun 2019 – Jul 2019
-                </span>
-                <p class="mt-2 text-gray-300 text-sm">
-                    Worked in mills maintenance, improving reliability of pneumatic systems in the CRM area.
-                </p>
-            </div>
-
-            <!-- RUGVED -->
-            <div class="relative pl-12 reveal">
-                <div class="absolute left-[-6px] top-3 w-6 h-[3px] bg-gray-700 rounded"></div>
-
-                <h3 class="text-xl font-bold text-white">Electrical & Electronics Engineer</h3>
-                <p class="text-data-accent">RUGVED Systems, Manipal</p>
-                <span class="inline-block mt-2 text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">
-                    2017 – 2019
-                </span>
-                <p class="mt-2 text-gray-300 text-sm">
-                    Led vehicle electronics architecture including sensors (LiDAR, GPS, IMU), motor controllers,
-                    embedded computing (NVIDIA Jetson TX2), EMI-safe PCB design, diagnostics, fail-safes, and telemetry.
-                </p>
-            </div>
-
         </div>
     </div>
 </section>
+
 
 
     <!-- Contact Section -->
