--- a/index.html
+++ b/index.html
@@ -378,102 +378,112 @@
     </section>
 
    <!-- Experience Section -->
-<section id="experience" class="py-20 relative">
-    <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
-        <div class="text-center mb-16 reveal">
+<section id="experience" class="py-24 relative overflow-hidden">
+    <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="text-center mb-20 reveal">
             <h2 class="text-3xl md:text-4xl font-bold">Professional Journey</h2>
         </div>
 
-        <!-- Ladder Container -->
-        <div class="relative flex gap-10">
+        <div class="relative flex gap-16">
 
-            <!-- LADDER -->
-            <div class="relative w-16 flex flex-col items-center">
+            <!-- ROPE LADDER -->
+            <div class="relative w-28 ladder-sway flex justify-center">
 
-                <!-- Left Rail -->
-                <div class="absolute left-3 top-0 bottom-0 w-[4px] bg-gradient-to-b from-data-accent via-gray-600 to-gray-700 rounded-full"></div>
+                <!-- Left Rope -->
+                <div class="rope absolute left-4 top-0 bottom-0 w-[10px] rounded-full"></div>
 
-                <!-- Right Rail -->
-                <div class="absolute right-3 top-0 bottom-0 w-[4px] bg-gradient-to-b from-data-accent via-gray-600 to-gray-700 rounded-full"></div>
+                <!-- Right Rope -->
+                <div class="rope absolute right-4 top-0 bottom-0 w-[10px] rounded-full"></div>
 
                 <!-- Rungs -->
-                <div class="flex flex-col justify-between h-full py-4">
-                    <div class="w-10 h-[4px] bg-data-accent rounded animate-pulse"></div>
-                    <div class="w-10 h-[4px] bg-gray-400 rounded"></div>
-                    <div class="w-10 h-[4px] bg-gray-500 rounded"></div>
-                    <div class="w-10 h-[4px] bg-gray-600 rounded"></div>
-                    <div class="w-10 h-[4px] bg-gray-700 rounded"></div>
+                <div class="relative flex flex-col items-center justify-between h-full py-6">
+                    <!-- many rungs -->
+                    <div class="rung w-20 h-3 rounded"></div>
+                    <div class="rung w-20 h-3 rounded"></div>
+                    <div class="rung w-20 h-3 rounded"></div>
+                    <div class="rung w-20 h-3 rounded"></div>
+                    <div class="rung w-20 h-3 rounded"></div>
+                    <div class="rung w-20 h-3 rounded"></div>
+                    <div class="rung w-20 h-3 rounded"></div>
+                    <div class="rung w-20 h-3 rounded"></div>
+                    <div class="rung w-20 h-3 rounded"></div>
+                    <div class="rung w-20 h-3 rounded"></div>
                 </div>
 
                 <!-- PERSON AT PRESENT -->
-                <div class="absolute top-2 left-1/2 -translate-x-1/2 text-data-accent text-3xl animate-bounce">
+                <div class="absolute top-4 left-1/2 -translate-x-1/2 text-data-accent text-4xl drop-shadow-lg animate-pulse">
                     <i class="fas fa-person-sitting"></i>
                 </div>
             </div>
 
             <!-- CONTENT -->
-            <div class="flex-1 space-y-14">
+            <div class="flex-1 space-y-20">
 
                 <!-- Consultant -->
                 <div class="reveal">
-                    <h3 class="text-xl font-bold text-white">Consultant</h3>
-                    <p class="text-data-accent">Deloitte</p>
-                    <span class="inline-block mt-2 text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">
+                    <h3 class="text-2xl font-bold text-white">Consultant</h3>
+                    <p class="text-data-accent text-lg">Deloitte</p>
+                    <span class="inline-block mt-3 text-sm font-mono text-gray-400 bg-slate-800 px-3 py-1 rounded-full">
                         2022 – Present
                     </span>
-                    <p class="mt-2 text-gray-300 text-sm">
-                        Developed complex financial models in Excel and VBA. Automated reporting processes using SQL and Python.
-                        Assisted in cloud infrastructure setup on Azure.
+                    <p class="mt-4 text-gray-300 leading-relaxed">
+                        Leading data-driven initiatives across analytics, automation, and cloud enablement.
+                        Building scalable solutions using SQL, Python, and Azure while delivering
+                        executive-level insights through PowerBI.
                     </p>
                 </div>
 
                 <!-- Analyst -->
                 <div class="reveal">
-                    <h3 class="text-xl font-bold text-white">Analyst</h3>
-                    <p class="text-data-accent">Deloitte</p>
-                    <span class="inline-block mt-2 text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">
+                    <h3 class="text-2xl font-bold text-white">Analyst</h3>
+                    <p class="text-data-accent text-lg">Deloitte</p>
+                    <span class="inline-block mt-3 text-sm font-mono text-gray-400 bg-slate-800 px-3 py-1 rounded-full">
                         2020 – 2022
                     </span>
-                    <p class="mt-2 text-gray-300 text-sm">
-                        Focused on data cleaning, validation, and building foundational PowerBI dashboards.
+                    <p class="mt-4 text-gray-300 leading-relaxed">
+                        Built strong foundations in data cleaning, validation, and visualization.
+                        Created reliable PowerBI dashboards and automated reporting pipelines.
                     </p>
                 </div>
 
                 <!-- BTech -->
                 <div class="reveal">
-                    <h3 class="text-xl font-bold text-white">B.Tech – Mechanical Engineering</h3>
-                    <p class="text-data-accent">Manipal Institute of Technology, Manipal</p>
-                    <span class="inline-block mt-2 text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">
+                    <h3 class="text-2xl font-bold text-white">B.Tech – Mechanical Engineering</h3>
+                    <p class="text-data-accent text-lg">Manipal Institute of Technology</p>
+                    <span class="inline-block mt-3 text-sm font-mono text-gray-400 bg-slate-800 px-3 py-1 rounded-full">
                         2016 – 2020
                     </span>
-                    <p class="mt-2 text-gray-300 text-sm">
-                        Strong foundation in engineering and problem-solving.
+                    <p class="mt-4 text-gray-300 leading-relaxed">
+                        Developed a strong engineering mindset with emphasis on problem-solving,
+                        systems thinking, and analytics.  
                         <span class="text-gray-400">CGPA: 8.32</span>
                     </p>
                 </div>
 
                 <!-- Tata Steel -->
                 <div class="reveal">
-                    <h3 class="text-xl font-bold text-white">Engineering Trainee</h3>
-                    <p class="text-data-accent">Tata Steel, Jamshedpur</p>
-                    <span class="inline-block mt-2 text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">
+                    <h3 class="text-2xl font-bold text-white">Engineering Trainee</h3>
+                    <p class="text-data-accent text-lg">Tata Steel, Jamshedpur</p>
+                    <span class="inline-block mt-3 text-sm font-mono text-gray-400 bg-slate-800 px-3 py-1 rounded-full">
                         Jun 2019 – Jul 2019
                     </span>
-                    <p class="mt-2 text-gray-300 text-sm">
-                        Improved reliability of pneumatic systems in the CRM area.
+                    <p class="mt-4 text-gray-300 leading-relaxed">
+                        Worked in mills maintenance to improve reliability of pneumatic systems
+                        in the CRM area, gaining real-world industrial exposure.
                     </p>
                 </div>
 
                 <!-- RUGVED -->
                 <div class="reveal">
-                    <h3 class="text-xl font-bold text-white">Electrical & Electronics Engineer</h3>
-                    <p class="text-data-accent">RUGVED Systems, Manipal</p>
-                    <span class="inline-block mt-2 text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">
+                    <h3 class="text-2xl font-bold text-white">Electrical & Electronics Engineer</h3>
+                    <p class="text-data-accent text-lg">RUGVED Systems, Manipal</p>
+                    <span class="inline-block mt-3 text-sm font-mono text-gray-400 bg-slate-800 px-3 py-1 rounded-full">
                         2017 – 2019
                     </span>
-                    <p class="mt-2 text-gray-300 text-sm">
-                        Led vehicle electronics architecture including sensors, motor controllers, embedded systems,
-                        EMI-safe PCB design, telemetry, and system diagnostics.
+                    <p class="mt-4 text-gray-300 leading-relaxed">
+                        Led vehicle electronics architecture including sensors (LiDAR, GPS, IMU),
+                        motor controllers, embedded systems (Jetson TX2), EMI-safe PCB design,
+                        diagnostics, fail-safes, and real-time telemetry.
                     </p>
                 </div>
 
@@ -481,6 +491,7 @@
         </div>
     </div>
 </section>
+
 
 
 
