--- a/index.html
+++ b/index.html
@@ -377,8 +377,8 @@
         </div>
     </section>
 
-   <!-- Experience Section -->
-<section id="experience" class="py-24 relative overflow-hidden">
+ <!-- Experience Section -->
+<section id="experience" class="py-24 relative">
     <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="text-center mb-20 reveal">
             <h2 class="text-3xl md:text-4xl font-bold">Professional Journey</h2>
@@ -386,32 +386,31 @@
 
         <div class="relative flex gap-16">
 
-            <!-- ROPE LADDER -->
-            <div class="relative w-28 ladder-sway flex justify-center">
+            <!-- LADDER -->
+            <div class="relative w-24 flex justify-center">
 
                 <!-- Left Rope -->
-                <div class="rope absolute left-4 top-0 bottom-0 w-[10px] rounded-full"></div>
+                <div class="absolute left-2 top-0 bottom-0 w-2 rounded-full bg-gradient-to-b from-yellow-700 via-yellow-800 to-yellow-900 shadow-inner"></div>
 
                 <!-- Right Rope -->
-                <div class="rope absolute right-4 top-0 bottom-0 w-[10px] rounded-full"></div>
+                <div class="absolute right-2 top-0 bottom-0 w-2 rounded-full bg-gradient-to-b from-yellow-700 via-yellow-800 to-yellow-900 shadow-inner"></div>
 
                 <!-- Rungs -->
-                <div class="relative flex flex-col items-center justify-between h-full py-6">
-                    <!-- many rungs -->
-                    <div class="rung w-20 h-3 rounded"></div>
-                    <div class="rung w-20 h-3 rounded"></div>
-                    <div class="rung w-20 h-3 rounded"></div>
-                    <div class="rung w-20 h-3 rounded"></div>
-                    <div class="rung w-20 h-3 rounded"></div>
-                    <div class="rung w-20 h-3 rounded"></div>
-                    <div class="rung w-20 h-3 rounded"></div>
-                    <div class="rung w-20 h-3 rounded"></div>
-                    <div class="rung w-20 h-3 rounded"></div>
-                    <div class="rung w-20 h-3 rounded"></div>
+                <div class="relative flex flex-col justify-between h-full py-8">
+                    <div class="w-16 h-3 rounded bg-gradient-to-b from-yellow-300 to-yellow-600 shadow-md"></div>
+                    <div class="w-16 h-3 rounded bg-gradient-to-b from-yellow-300 to-yellow-600 shadow-md"></div>
+                    <div class="w-16 h-3 rounded bg-gradient-to-b from-yellow-300 to-yellow-600 shadow-md"></div>
+                    <div class="w-16 h-3 rounded bg-gradient-to-b from-yellow-300 to-yellow-600 shadow-md"></div>
+                    <div class="w-16 h-3 rounded bg-gradient-to-b from-yellow-300 to-yellow-600 shadow-md"></div>
+                    <div class="w-16 h-3 rounded bg-gradient-to-b from-yellow-300 to-yellow-600 shadow-md"></div>
+                    <div class="w-16 h-3 rounded bg-gradient-to-b from-yellow-300 to-yellow-600 shadow-md"></div>
+                    <div class="w-16 h-3 rounded bg-gradient-to-b from-yellow-300 to-yellow-600 shadow-md"></div>
+                    <div class="w-16 h-3 rounded bg-gradient-to-b from-yellow-300 to-yellow-600 shadow-md"></div>
+                    <div class="w-16 h-3 rounded bg-gradient-to-b from-yellow-300 to-yellow-600 shadow-md"></div>
                 </div>
 
                 <!-- PERSON AT PRESENT -->
-                <div class="absolute top-4 left-1/2 -translate-x-1/2 text-data-accent text-4xl drop-shadow-lg animate-pulse">
+                <div class="absolute top-4 left-1/2 -translate-x-1/2 text-data-accent text-4xl animate-pulse">
                     <i class="fas fa-person-sitting"></i>
                 </div>
             </div>
@@ -427,9 +426,8 @@
                         2022 – Present
                     </span>
                     <p class="mt-4 text-gray-300 leading-relaxed">
-                        Leading data-driven initiatives across analytics, automation, and cloud enablement.
-                        Building scalable solutions using SQL, Python, and Azure while delivering
-                        executive-level insights through PowerBI.
+                        Developed complex financial models in Excel and VBA. Automated reporting processes using SQL and Python.
+                        Assisted in cloud infrastructure setup on Azure.
                     </p>
                 </div>
 
@@ -441,21 +439,19 @@
                         2020 – 2022
                     </span>
                     <p class="mt-4 text-gray-300 leading-relaxed">
-                        Built strong foundations in data cleaning, validation, and visualization.
-                        Created reliable PowerBI dashboards and automated reporting pipelines.
+                        Focused on data cleaning, validation, and building foundational PowerBI dashboards.
                     </p>
                 </div>
 
                 <!-- BTech -->
                 <div class="reveal">
                     <h3 class="text-2xl font-bold text-white">B.Tech – Mechanical Engineering</h3>
-                    <p class="text-data-accent text-lg">Manipal Institute of Technology</p>
+                    <p class="text-data-accent text-lg">Manipal Institute of Technology, Manipal</p>
                     <span class="inline-block mt-3 text-sm font-mono text-gray-400 bg-slate-800 px-3 py-1 rounded-full">
                         2016 – 2020
                     </span>
                     <p class="mt-4 text-gray-300 leading-relaxed">
-                        Developed a strong engineering mindset with emphasis on problem-solving,
-                        systems thinking, and analytics.  
+                        Strong foundation in engineering, analytics, and problem-solving.  
                         <span class="text-gray-400">CGPA: 8.32</span>
                     </p>
                 </div>
@@ -468,8 +464,7 @@
                         Jun 2019 – Jul 2019
                     </span>
                     <p class="mt-4 text-gray-300 leading-relaxed">
-                        Worked in mills maintenance to improve reliability of pneumatic systems
-                        in the CRM area, gaining real-world industrial exposure.
+                        Worked in mills maintenance to improve reliability of pneumatic systems in the CRM area.
                     </p>
                 </div>
 
@@ -481,9 +476,8 @@
                         2017 – 2019
                     </span>
                     <p class="mt-4 text-gray-300 leading-relaxed">
-                        Led vehicle electronics architecture including sensors (LiDAR, GPS, IMU),
-                        motor controllers, embedded systems (Jetson TX2), EMI-safe PCB design,
-                        diagnostics, fail-safes, and real-time telemetry.
+                        Led vehicle electronics architecture including sensors, motor controllers,
+                        embedded systems, EMI-safe PCB design, diagnostics, and telemetry.
                     </p>
                 </div>
 
