--- a/index.html
+++ b/index.html
@@ -435,8 +435,14 @@
                         2022 – Present
                     </span>
                     <p class="mt-4 text-gray-300 leading-relaxed">
-                        Developed complex financial models, automated reporting pipelines,
-                        and delivered cloud-enabled analytics solutions using SQL, Python, and Azure.
+                         Led and delivered several high-impact data and analytics initiatives across banking, FMCG, manufacturing, and tech sectors. Key contributions include:
+• Led data migration of 1.2M+ accounts during a major bank merger with 99.9% accuracy using SAS.
+• Managed 5+ live analytics dashboards for an FMCG client, supporting 500+ users with real-time data.
+• Enhanced expiry alert systems, cutting product wastage by 25%, and improved root cause analysis (RCA), resolving 95% of data issues.
+• Delivered ~$1M in annual revenue impact by building advanced analytics solutions for top clients.
+• Spearheaded Power BI adoption through monthly training of 80–100 professionals and authored RFPs for new client engagements.
+• Reduced dashboard refresh times from 3 hours to 25 minutes and rearchitected ETL pipelines (ADF → Databricks → AAS → Webapps), improving performance and cutting costs by €300K+ annually.
+• Delivered 25+ Power BI dashboards with insights on sales and market performance across key global regions.
                     </p>
                 </div>
 
@@ -447,8 +453,8 @@
                         2020 – 2022
                     </span>
                     <p class="mt-4 text-gray-300 leading-relaxed">
-                        Built strong foundations in data validation, transformation,
-                        and dashboarding using PowerBI for audit and advisory clients.
+                        Started professional journey focusing on data cleaning, validation, and building foundational
+                    PowerBI reports for clients.
                     </p>
                 </div>
 
@@ -459,7 +465,8 @@
                         2016 – 2020
                     </span>
                     <p class="mt-4 text-gray-300 leading-relaxed">
-                        Built analytical and systems-thinking foundations alongside core engineering principles.
+                        Completed undergraduate studies with strong fundamentals in engineering, analytics, and
+                    problem-solving.
                         <span class="text-gray-400">CGPA: 8.32</span>
                     </p>
                 </div>
@@ -471,7 +478,8 @@
                         Jun 2019 – Jul 2019
                     </span>
                     <p class="mt-4 text-gray-300 leading-relaxed">
-                        Improved pneumatic system reliability in CRM operations through hands-on industrial exposure.
+                        Worked primarily in the mills maintenance department, improving reliability of pneumatic
+                    systems in the CRM area.
                     </p>
                 </div>
 
@@ -482,8 +490,10 @@
                         2017 – 2019
                     </span>
                     <p class="mt-4 text-gray-300 leading-relaxed">
-                        Designed and integrated vehicle electronics including sensors,
-                        embedded systems, EMI-safe PCBs, telemetry, and diagnostics.
+                        Led design, integration, and testing of vehicle electronic systems including power distribution,
+                    sensor interfacing (LiDAR, GPS, IMU), motor controllers, and embedded computing (NVIDIA Jetson TX2).
+                    Developed PCBs, ensured EMI-safe wiring, implemented diagnostics, fail-safes, and real-time telemetry,
+                    and collaborated across mechanical and software teams for competition-ready deployment.
                     </p>
                 </div>
 
