--- a/index.html
+++ b/index.html
@@ -466,8 +466,7 @@
                     </span>
                     <p class="mt-4 text-gray-300 leading-relaxed">
                         Completed undergraduate studies with strong fundamentals in engineering, analytics, and
-                    problem-solving.
-                        <span class="text-gray-400">CGPA: 8.32</span>
+                    problem-solving.CGPA: 8.32.
                     </p>
                 </div>
 
