--- a/index.html
+++ b/index.html
@@ -435,14 +435,14 @@
                         2022 – Present
                     </span>
                     <p class="mt-4 text-gray-300 leading-relaxed">
-                         Led and delivered several high-impact data and analytics initiatives across banking, FMCG, manufacturing, and tech sectors. Key contributions include:
-• Led data migration of 1.2M+ accounts during a major bank merger with 99.9% accuracy using SAS.
-• Managed 5+ live analytics dashboards for an FMCG client, supporting 500+ users with real-time data.
-• Enhanced expiry alert systems, cutting product wastage by 25%, and improved root cause analysis (RCA), resolving 95% of data issues.
-• Delivered ~$1M in annual revenue impact by building advanced analytics solutions for top clients.
-• Spearheaded Power BI adoption through monthly training of 80–100 professionals and authored RFPs for new client engagements.
-• Reduced dashboard refresh times from 3 hours to 25 minutes and rearchitected ETL pipelines (ADF → Databricks → AAS → Webapps), improving performance and cutting costs by €300K+ annually.
-• Delivered 25+ Power BI dashboards with insights on sales and market performance across key global regions.
+                         Led and delivered several high-impact data and analytics initiatives across banking, FMCG, manufacturing, and tech sectors. Key contributions include:<br>
+• Led data migration of 1.2M+ accounts during a major bank merger with 99.9% accuracy using SAS.<br>
+• Managed 5+ live analytics dashboards for an FMCG client, supporting 500+ users with real-time data.<br>
+• Enhanced expiry alert systems, cutting product wastage by 25%, and improved root cause analysis (RCA), resolving 95% of data issues.<br>
+• Delivered ~$1M in annual revenue impact by building advanced analytics solutions for top clients.<br>
+• Spearheaded Power BI adoption through monthly training of 80–100 professionals and authored RFPs for new client engagements.<br>
+• Reduced dashboard refresh times from 3 hours to 25 minutes and rearchitected ETL pipelines (ADF → Databricks → AAS → Webapps), improving performance and cutting costs by €300K+ annually.<br>
+• Delivered 25+ Power BI dashboards with insights on sales and market performance across key global regions.<br>
                     </p>
                 </div>
 
@@ -466,7 +466,7 @@
                     </span>
                     <p class="mt-4 text-gray-300 leading-relaxed">
                         Completed undergraduate studies with strong fundamentals in engineering, analytics, and
-                    problem-solving.<br>CGPA: 8.32.
+                    problem-solving.<br>CGPA: 8.32
                     </p>
                 </div>
 
