--- a/index.html
+++ b/index.html
@@ -505,42 +505,42 @@
 
 
     <!-- Contact Section -->
-    <section id="contact" class="py-20 bg-gradient-to-t from-black to-slate-900">
-        <div class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-            <div class="reveal">
-                <h2 class="text-3xl md:text-4xl font-bold mb-6">Let's Analyze Together</h2>
-                <p class="text-gray-400 mb-10">
-                    Whether you have a question about my stack, want to discuss data architecture, or just want to connect in the industry.
-                </p>
-                
-                <div class="glass-card p-8 rounded-2xl max-w-lg mx-auto text-left">
-                    <form onsubmit="event.preventDefault(); alert('Thank you! This is a demo form.');" class="space-y-4">
-                        <div>
-                            <label class="block text-sm font-medium text-gray-400 mb-1">Name</label>
-                            <input type="text" class="w-full bg-slate-800/50 border border-gray-600 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-data-accent focus:ring-1 focus:ring-data-accent transition-colors" placeholder="John Doe">
-                        </div>
-                        <div>
-                            <label class="block text-sm font-medium text-gray-400 mb-1">Email</label>
-                            <input type="email" class="w-full bg-slate-800/50 border border-gray-600 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-data-accent focus:ring-1 focus:ring-data-accent transition-colors" placeholder="john@company.com">
-                        </div>
-                        <div>
-                            <label class="block text-sm font-medium text-gray-400 mb-1">Message</label>
-                            <textarea rows="4" class="w-full bg-slate-800/50 border border-gray-600 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-data-accent focus:ring-1 focus:ring-data-accent transition-colors" placeholder="How can we leverage data?"></textarea>
-                        </div>
-                        <button type="submit" class="w-full bg-gradient-to-r from-data-accent to-blue-600 text-black font-bold py-3 rounded-lg hover:opacity-90 transition-opacity">
-                            Send Message
-                        </button>
-                    </form>
-                </div>
+<section id="contact" class="py-20 bg-gradient-to-t from-black to-slate-900">
+    <div class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
+        <div class="reveal">
+            <h2 class="text-3xl md:text-4xl font-bold mb-6">Let's Analyze Together</h2>
+            <p class="text-gray-400 mb-10">
+                Whether you have a question about my stack, want to discuss data architecture, or just want to connect in the industry.
+            </p>
+            
+            <div class="glass-card p-8 rounded-2xl max-w-lg mx-auto text-left">
+                <form action="mailto:vipulsureka246@gmail.com" method="post" enctype="text/plain" class="space-y-4">
+                    <div>
+                        <label class="block text-sm font-medium text-gray-400 mb-1">Name</label>
+                        <input type="text" name="Name" class="w-full bg-slate-800/50 border border-gray-600 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-data-accent focus:ring-1 focus:ring-data-accent transition-colors" placeholder="John Doe" required>
+                    </div>
+                    <div>
+                        <label class="block text-sm font-medium text-gray-400 mb-1">Email</label>
+                        <input type="email" name="Email" class="w-full bg-slate-800/50 border border-gray-600 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-data-accent focus:ring-1 focus:ring-data-accent transition-colors" placeholder="john@company.com" required>
+                    </div>
+                    <div>
+                        <label class="block text-sm font-medium text-gray-400 mb-1">Message</label>
+                        <textarea name="Message" rows="4" class="w-full bg-slate-800/50 border border-gray-600 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-data-accent focus:ring-1 focus:ring-data-accent transition-colors" placeholder="How can we leverage data?" required></textarea>
+                    </div>
+                    <button type="submit" class="w-full bg-gradient-to-r from-data-accent to-blue-600 text-black font-bold py-3 rounded-lg hover:opacity-90 transition-opacity">
+                        Send Message
+                    </button>
+                </form>
+            </div>
 
-                <div class="mt-12 flex justify-center space-x-8">
-                    <a href="#" class="text-gray-400 hover:text-white text-2xl transition-colors"><i class="fab fa-linkedin"></i></a>
-                    <a href="#" class="text-gray-400 hover:text-white text-2xl transition-colors"><i class="fab fa-github"></i></a>
-                    <a href="#" class="text-gray-400 hover:text-white text-2xl transition-colors"><i class="fas fa-envelope"></i></a>
-                </div>
+            <div class="mt-12 flex justify-center space-x-8">
+                <a href="#" class="text-gray-400 hover:text-white text-2xl transition-colors"><i class="fab fa-linkedin"></i></a>
+                <a href="#" class="text-gray-400 hover:text-white text-2xl transition-colors"><i class="fab fa-github"></i></a>
+                <a href="#" class="text-gray-400 hover:text-white text-2xl transition-colors"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Footer -->
     <footer class="py-8 border-t border-gray-800 text-center text-gray-500 text-sm">
