--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
         <div class="reveal">
             <h2 class="text-3xl md:text-4xl font-bold mb-6">Let's Analyze Together</h2>
             <p class="text-gray-400 mb-10">
-                Whether you have a question about my stack, want to discuss data architecture, or just want to connect in the industry.
+                Whether you have a question about my stack, want to discuss data architecture, or just want to connect for any of your data related queries.
             </p>
             
             <div class="glass-card p-8 rounded-2xl max-w-lg mx-auto text-left">
@@ -525,10 +525,10 @@
                     </div>
                     <div>
                         <label class="block text-sm font-medium text-gray-400 mb-1">Message</label>
-                        <textarea name="Message" rows="4" class="w-full bg-slate-800/50 border border-gray-600 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-data-accent focus:ring-1 focus:ring-data-accent transition-colors" placeholder="How can we leverage data?" required></textarea>
+                        <textarea name="Message" rows="4" class="w-full bg-slate-800/50 border border-gray-600 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-data-accent focus:ring-1 focus:ring-data-accent transition-colors" placeholder="How can we get insights from our Company's data?" required></textarea>
                     </div>
                     <button type="submit" class="w-full bg-gradient-to-r from-data-accent to-blue-600 text-black font-bold py-3 rounded-lg hover:opacity-90 transition-opacity">
-                        Send Message
+                        Send Email
                     </button>
                 </form>
             </div>
