--- a/index.html
+++ b/index.html
@@ -534,9 +534,9 @@
             </div>
 
             <div class="mt-12 flex justify-center space-x-8">
-                <a href="#" class="text-gray-400 hover:text-white text-2xl transition-colors"><i class="fab fa-linkedin"></i></a>
-                <a href="#" class="text-gray-400 hover:text-white text-2xl transition-colors"><i class="fab fa-github"></i></a>
-                <a href="#" class="text-gray-400 hover:text-white text-2xl transition-colors"><i class="fas fa-envelope"></i></a>
+                <a href="https://www.linkedin.com/in/vipulsureka/" class="text-gray-400 hover:text-white text-2xl transition-colors"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/Vipul-Sureka/" class="text-gray-400 hover:text-white text-2xl transition-colors"><i class="fab fa-github"></i></a>
+                <a href="mailto:vipulsureka246@gmail.com" class="text-gray-400 hover:text-white text-2xl transition-colors"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
     </div>
