--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <div class="mt-10 flex justify-center gap-4">
                 <a href="#experience" class="group relative px-8 py-3 bg-white text-black font-bold rounded-lg overflow-hidden transition-all hover:scale-105">
                     <div class="absolute inset-0 w-full h-full bg-gradient-to-r from-data-accent to-data-purple opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
-                    <span class="relative group-hover:text-white transition-colors">View My Work</span>
+                    <span class="relative group-hover:text-white transition-colors">My Professional Journey</span>
                 </a>
                 <a href="#contact" class="px-8 py-3 glass-card text-white font-semibold rounded-lg hover:bg-white/10 transition-all border border-white/20">
                     Contact Me
@@ -544,7 +544,7 @@
 
     <!-- Footer -->
     <footer class="py-8 border-t border-gray-800 text-center text-gray-500 text-sm">
-        <p>&copy; 2023 Data Consultant Portfolio. Built with Data & Passion.</p>
+        <p>&copy; 2020 Data Consultant Portfolio. Built with Data & Passion.</p>
     </footer>
 
     <!-- Scripts -->
