--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         </div>
       </div>
       
-      <div class="reveal relative md:w-3/5 lg:w-1/2">
+      <div class="reveal relative md:w-3/5 lg:w-1/2 md:translate-x-4 lg:translate-x-8">
         <!-- Abstract Data Representation -->
         <div class="glass-card p-8 rounded-2xl relative z-10 animate-float">
           <div class="flex items-center justify-between mb-4 border-b border-gray-700 pb-2">
