--- a/index.html
+++ b/index.html
@@ -207,15 +207,15 @@
         <div class="h-1 w-20 bg-data-accent rounded mb-6"></div>
         
         <p class="text-gray-300 text-[14px] leading-relaxed mb-6">
-          Hi there, I'm Vipul, a consultant at Deloitte India, where I have gained extensive experience over the past five years. During this time, I have been dedicated to delivering data-driven solutions to prominent FMCG clients across the globe.<br>
-          In my role, I collaborate closely with teams from diverse backgrounds to solve data driven problems for helping businesses make better decisions. I take pride in my strong communication skills and my ability to streamline complex business processes, ensuring efficient operations.<br>
+          Hi there, I'm Vipul, a consultant at Deloitte India, where I have gained extensive experience over the past five years. During this time, I have been dedicated to delivering data-driven solutions to prominent FMCG clients across the globe.<br><br>
+          In my role, I collaborate closely with teams from diverse backgrounds to solve data driven problems for helping businesses make better decisions. I take pride in my strong communication skills and my ability to streamline complex business processes, ensuring efficient operations.<br><br>
           I help clients turn their data into insights. I create stunning dashboards and reports that make data easy to understand and use.<br>
           One of the aspects of my job that I find most enjoyable is the opportunity to work with multicultural teams and gain insights from different perspectives. Through collaborating with professionals from various parts of the world, I have come to appreciate the importance of global viewpoints and the richness that diversity brings.<br>
-          I have also worked on an Autonomous Vehicle student project(Rugved Systems) for around 2 years in the field of Analog Circuits, Microcontrollers, Computer vision, Deep Learning and Robotics. During these years, Our team has won national competitions held by TATA in the fields of Robotics and AI and we were able to get 8th position in the IGVC challenge held at Oakland University, USA in 2017.<br>
+          I have also worked on an Autonomous Vehicle student project(Rugved Systems) for around 2 years in the field of Analog Circuits, Microcontrollers, Computer vision, Deep Learning and Robotics. During these years, Our team has won national competitions held by TATA in the fields of Robotics and AI and we were able to get 8th position in the IGVC challenge held at Oakland University, USA in 2017.<br><br>
           I have been the head of the electronics team for a year and gained various skills in management and leadership.<br>
-          I firmly believe that by leveraging the power of data and analytics, businesses can make well-informed decisions that ultimately lead to greater success.<br>
-          With this thought, I'm exploring a lot in the data field and have developed new interest towards AI and ML, which actually started since I worked in Rugved Systems and now its taking shape and I'm trying to connect the dots.<br>
-          In my free time I like playing music and playing sports. Cricket, table-tennis and badminton are my favorites.<br>
+          I firmly believe that by leveraging the power of data and analytics, businesses can make well-informed decisions that ultimately lead to greater success.<br><br>
+          With this thought, I'm exploring a lot in the data field and have developed new interest towards AI and ML, which actually started since I worked in Rugved Systems and now its taking shape and I'm trying to connect the dots.<br><br>
+          In my free time I like playing music and playing sports. Cricket, table-tennis and badminton are my favorites.<br><br>
           Please feel free to reach out if you're looking for data-driven problem solver or a game of cricket :)
         </p>
         
