--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <!-- Profile Picture -->
         <img src="https://raw.githubusercontent.com/Vipul-Sureka/resume/main/dp.png" 
              alt="Profile Pic" 
-             class="w-70 h-70 rounded-full mb-20 mx-auto md:mx-0" 
+             class="w-70 h-70 rounded-full mb-10 mx-auto md:mx-0 transform translate-x-2" 
              style="margin-top: -100px;">
 
         <!-- Abstract Data Representation -->
