--- a/index.html
+++ b/index.html
@@ -178,8 +178,7 @@
                 <span class="text-gradient">Strategic Intelligence</span>
             </h1>
             <p class="mt-4 max-w-2xl mx-auto text-xl text-gray-300 font-light">
-                Hi, I'm a Consultant at <span class="text-white font-semibold">Deloitte</span> with 5 Years of Experience. 
-                Specializing in Cloud Architecture, Data Engineering, and Visualization.
+                Turning Raw Data into Strategic Intelligence.
             </p>
             <div class="mt-10 flex justify-center gap-4">
                 <a href="#experience" class="group relative px-8 py-3 bg-white text-black font-bold rounded-lg overflow-hidden transition-all hover:scale-105">
