--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <span class="text-data-accent font-mono text-sm"><i class="fas fa-circle text-[8px] animate-pulse mr-2"></i>Available for new challenges</span>
             </div>
             <h1 class="text-5xl md:text-7xl font-extrabold tracking-tight mb-6">
-                Turning Raw Data into <br>
+                I'm <br>
                 <span class="text-gradient dynamic-text" id="dynamic-text"></span>
             </h1>                  
             <p class="mt-4 max-w-2xl mx-auto text-xl text-gray-300 font-light">
@@ -723,7 +723,7 @@
 
     
     <script>
-  const words = ["Insights", "Solutions", "Decisions", "Opportunities"]; // Words to cycle
+  const words = ["Vipul Sureka", "a Data Professional", "an Analytics Consultant"]; // Words to cycle
   const dynamicText = document.getElementById("dynamic-text");
 
   let wordIndex = 0;
